# cheese

./: .gitignore  .gitlab-ci.yml  AUTHORS  ChangeLog  INSTALL  MAINTAINERS  Makefile  Makefile.am  Makefile.am.enums  Makefile.am.marshal  NEWS  README  README.darcs  README.md  ROADMAP  TODO  acinclude.m4  autogen.sh  cairo-custom.c  camera.py  cheese  cheese-gtk.pc.in  cheese.c  cheese.doap  cheese.glade  cheese.h  cheese.pc.in  configure  configure.ac  configure.cheese  fileutil.c  fileutil.h  fix_perms.sh  gst-pipeline.c  gst-pipeline.h  meson.build  meson_options.txt  meson_post_install.py  org.gnome.Cheese.json  pipeline-photo.c  (+7 more)
data/: Makefile  Makefile.am  cheese-about.ui  cheese-actions.ui  cheese-appmenu.ui  cheese-bugreport.sh  cheese-gtk.pc.in  cheese-main-window.ui  cheese-prefs.glade  cheese-prefs.ui  cheese-ui.xml  cheese-viewport.json  cheese.appdata.xml.in  cheese.catalog  cheese.css  cheese.desktop  cheese.desktop.in  cheese.desktop.in.in  cheese.glade  cheese.gresource.xml  cheese.pc.in  cheese.schemas.in  cheese.ui  gtkrc  headerbar.ui  menus.ui  meson.build  org.gnome.Camera.service.in  org.gnome.Camera.xml  org.gnome.Cheese.appdata.xml.in  org.gnome.Cheese.desktop.in  org.gnome.Cheese.desktop.in.in  org.gnome.Cheese.gresource.xml  org.gnome.Cheese.gschema.xml  org.gnome.Cheese.gschema.xml.in  org.gnome.Cheese.service  org.gnome.Cheese.service.in  org.gnome.Cheese.yml  shortcuts.ui  wscript_build
data/effects/: Makefile  Makefile.am  README  agingtv.effect  agingtv.effect.in  dicetv.effect  dicetv.effect.in  edgetv.effect  edgetv.effect.in  hulk.effect  hulk.effect.in  identity.effect.in  mauve.effect  mauve.effect.in  noir.effect  noir.effect.in  optv.effect  optv.effect.in  quarktv.effect  quarktv.effect.in  radioactv.effect  radioactv.effect.in  saturation.effect  saturation.effect.in  shagadelictv.effect  shagadelictv.effect.in  streaktv.effect  streaktv.effect.in  vertigotv.effect  vertigotv.effect.in  warptv.effect  warptv.effect.in  wscript_build
data/icons/: Makefile  icons.make  meson.build  wscript_build
data/pixmaps/: Makefile.am
data/sounds/: Makefile.am
docs/reference/: Makefile.am  cheese-docs.xml  cheese-sections.txt  cheese.types  cheese.xml  meson.build
help/: ChangeLog  ChangeLog.pre-git  LINGUAS  Makefile.am  cheese.omf.in  meson.build  wscript_build
help/C/: apply-effects.page  burst-mode.page  card-graphic.page  card-graphic.page.stub  cheese.xml  closed.page  closed.page.stub  delete-photo.page  disable-countdown.page  disable-flash.page  effects-apply.page  full-screen.page  image-properties.page  index.page  introduction.page  mode-wide.page  mode-wide.page.stub  no-device.page  no-device.page.stub  photo-delete.page  photo-save.page  photo-take.page  photo-view.page  pref-burst-mode.page  pref-countdown.page  pref-flash.page  pref-fullscreen.page  pref-image-properties.page  pref-photo-resolution.page  pref-resolution.page  record-video.page  resolution-photo.page  save-photo.page  take-photo.page  video-record.page  view-photo.page  webcams.page  webcams.page.stub  wide-mode.page
help/ca/: ca.po
help/cs/: cs.po
help/da/: da.po
help/de/: de.po
help/el/: el.po
help/en_GB/: en_GB.po
help/es/: es.po
help/eu/: eu.po
help/fi/: fi.po
help/fr/: fr.po
help/gl/: gl.po
help/hu/: hu.po
help/id/: id.po
help/it/: it.po
help/ko/: ko.po
help/lv/: lv.po
help/nl/: nl.po
help/oc/: oc.po
help/pa/: pa.po
help/pl/: pl.po
help/pt_BR/: pt_BR.po
help/ru/: ru.po
help/sl/: sl.po
help/sv/: sv.po
help/te/: te.po
help/th/: th.po
help/tr/: tr.po
help/uk/: uk.po
help/zh_CN/: zh_CN.po
libcheese/: Makefile.am  cheese-aspect-frame.c  cheese-aspect-frame.h  cheese-avatar-chooser.c  cheese-avatar-chooser.h  cheese-avatar-widget.c  cheese-avatar-widget.h  cheese-camera-device-monitor.c  cheese-camera-device-monitor.h  cheese-camera-device.c  cheese-camera-device.h  cheese-camera.c  cheese-camera.h  cheese-countdown.c  cheese-crop-area.c  cheese-crop-area.h  cheese-effect.c  cheese-effect.h  cheese-enum-types.c.in  cheese-enum-types.h.in  cheese-enums.c.template  cheese-enums.h.template  cheese-fileutil.c  cheese-fileutil.h  cheese-flash.c  cheese-flash.h  cheese-gconf.c  cheese-gconf.h  cheese-gtk.c  cheese-gtk.h  cheese-gtk.map  cheese-gtk.symbols  cheese-marshal.list  cheese-test-monitor.c  cheese-test-widget.c  cheese-widget-private.h  cheese-widget.c  cheese-widget.h  cheese.c  cheese.h  (+5 more)
src/: Makefile  Makefile.am  cairo-custom.c  cairo-custom.h  cheese-application.vala  cheese-audio-play.c  cheese-audio-play.h  cheese-cairo-custom.c  cheese-cairo-custom.h  cheese-command-handler.c  cheese-command-handler.h  cheese-commands-file.c  cheese-commands-help.c  cheese-commands.c  cheese-commands.h  cheese-config.h.at  cheese-countdown.c  cheese-countdown.h  cheese-countdown.vala  cheese-dbus-infos.xml  cheese-dbus.c  cheese-dbus.h  cheese-effect-chooser.c  cheese-effect-chooser.h  cheese-effects-manager.vala  cheese-effects-widget.c  cheese-effects-widget.h  cheese-fileutil.c  cheese-fileutil.h  cheese-flash.c  cheese-flash.h  cheese-flash.o.d  cheese-gconf.c  cheese-gconf.h  cheese-main.vala  cheese-no-camera.c  cheese-no-camera.h  cheese-pipeline-photo.c  cheese-pipeline-photo.h  cheese-pipeline-video.c  (+62 more)
src/thumbview/: cheese-thumb-view.c  cheese-thumb-view.h  cheese-thumbnail.c  eog-thumb-nav.c  eog-thumb-nav.h  eog-thumbnail.c
src/vapi/: cheese-common.deps  cheese-common.vapi  cheese-thumbview.vapi  clutter-tablelayout.vapi  config.vapi  eogthumbnav.vapi  libcanberra-gtk3.vapi
tests/: Makefile.am  cheese-test-camera-effects.c  cheese-test-camera.c  cheese-test-chooser.c  cheese-test-flash.c  cheese-test-monitor.c  cheese-test-widget.c  meson.build  test-libcheese-gtk.c  test-libcheese.c  test-service-client.c  test-webcam-button.c  test-widgets.c
valasrc/: Makefile.am  cheese-countdown.vala  cheese-effects-manager.vala  cheese-main.vala  cheese-window.vala  cheese.vala
valasrc/thumbview/: cheese-fileutil.c  cheese-fileutil.h  eog-thumb-nav.c
valasrc/vapi/: cheese-common.vapi  config.vapi  (+2 more)
(+200 files in other folders)
